style: trello 24-10-25 only css span-badge yellow opacity fix font family inter font size scrollbar hide

--- a/src/components/InteractiveFeedbackCard/InteractiveFeedbackCard.scss
+++ b/src/components/InteractiveFeedbackCard/InteractiveFeedbackCard.scss
@@ -694,7 +694,7 @@
   //color: var(--brand-color);
 
   .punchline-typography {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     line-height: 1.4;
     font-weight: 100;
     word-wrap: break-word;
@@ -711,7 +711,7 @@
     padding: 4px 12px;
     padding-top: 2px;
     font-family: $font-otomanopee;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     border: 2px solid black;
     line-height: 1.2;
     transition: transform 0.2s ease;
