--- a/src/pages/home/HomeGroupedReportsList.scss
+++ b/src/pages/home/HomeGroupedReportsList.scss
@@ -274,6 +274,7 @@
     cursor: pointer;
     font-weight: 600;
     font-size: 17px;
+    font-family: "Inter", sans-serif;
     gap: 8px; // espace entre l’icône et le texte
 
     &:hover {
