--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,16 @@ body {
   overflow-x: hidden;
 }
 
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 /* Évite les débordements involontaires */
 *,
 *::before,
